# UdemyRun

./: .env.example  .gitignore  README.md  ai-upskill.code-workspace  setup.sh
capstone/my-capstone/: main.py  pyproject.toml
week1/: README.md  pyproject.toml
week1/brochure-generator/: pyproject.toml
week1/career-chatbot/: pyproject.toml
week1/cli-llm-tool/: main.py  pyproject.toml
week1/day1-task-manager-cli/: main.py
week1/day6-website-summarizer/: main.py  pyproject.toml
week1/website-summarizer/: main.py  pyproject.toml
week2/: README.md
week2/day9-gradio-chatbot/: main.py  pyproject.toml
week2/full-stack-kanban/: main.py  pyproject.toml
week3/: README.md
week3/day16-rag-document-qa/: main.py  pyproject.toml
week3/day21-rag-research-assistant/: main.py
week4/: README.md
week5/: README.md
week5/capstone/: CLAUDE.md  SPEC.md
