[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.89.0",
    "beautifulsoup4>=4.14.3",
    "google-generativeai>=0.8.6",
    "gradio>=6.11.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
]
